--- a/FourthDownPunt/index.html
+++ b/FourthDownPunt/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1> FourthDownPunt</h1>
+<p> This is a page for our stupid madden league</p>
 </body>
 </html>
