--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1> FourthDownPunt</h1>
-<p> This is a page for our stupid madden league</p>
+<body style = background-color: #000000;>
+<h1 style = color: "ffffff";> FourthDownPunt</h1>
+<p style = color: "ffffff"> This is a page for our stupid madden league</p>
 </body>
 </html>
