--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body style = background-color: #000000;>
 <h1 style = color: "ffffff";> FourthDownPunt</h1>
-<p style = color: "ffffff"> This is a page for our stupid madden league</p>
+<p style = color: "ffffff"> This is a page for our stupid madden league, dude</p>
 </body>
 </html>
