--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body style = "background-color: #000000;">
-<IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg" style = "float: middle">
+table {
+	display: table;
+	border: 0px; }
+<td></td>
+<td><IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg" style = "float: middle"></td>
 <h1 style = "color: #ffffff;"> FourthDownPunt</h1>
 <p style = "color: #ffffff;"> This is a page for our stupid madden league, dude</p>
 </body>
