--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ table {
 	border: 0px;
     width: 100%;	}
 <td style = "width: 33%"></td>
-<td style = "width: 33%"><IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg" style = "float: middle"></td>
+<td style = "width: 33%; text-align: middle"><IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg" style = "float: middle"></td>
 <h1 style = "color: #ffffff;"> FourthDownPunt</h1>
 <p style = "color: #ffffff;"> This is a page for our stupid madden league, dude</p>
 </body>
