--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+<title> Main page </title>
+</head>
 <body style = "background-color: #000000;">
 table {
 	display: table;
