--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@ table {
 	display: table;
 	border: 0px;
     width: 100%;	}
+	<table>
+	<tr>
+		<td> <a href="index.html">Homepage</a></td>
+		<td> <a href="Rules">Rules BITCHES </a></td>
+	</tr>
+	</table>
 <td style = "width: 33%"></td>
 <td style = "width: 33%; text-align: middle"><IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg"></td>
 <h1 style = "color: #ffffff;"> FourthDownPunt</h1>
