--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <title> Main page </title>
 </head>
-<body style = "background-color: #000000;">
+<body>
 table {
 	display: table;
 	border: 0px;
@@ -17,7 +17,7 @@ table {
 	</table>
 <td style = "width: 33%"></td>
 <td style = "width: 33%; text-align: middle"><IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg"></td>
-<h1 style = "color: #ffffff;"> FourthDownPunt</h1>
-<p style = "color: #ffffff;"> This is a page for our stupid madden league, dude</p>
+<h1> FourthDownPunt</h1>
+<p> This is a page for our stupid madden league, dude</p>
 </body>
 </html>
