--- a/Rules.html
+++ b/Rules.html
@@ -4,6 +4,10 @@ title: Rules
 
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="UTF-8">
+<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+<title> Rules </title>
 <body style = "background-color: #f6f6f6;">
 <h1> Rules Bruh </h1>
 </body>
