--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 		<td> <a href="Rules">Rules BITCHES </a></td>
 	</tr>
 	</table>
-<td style = "width: 33%"></td>
-<td style = "width: 33%; text-align: middle"><IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg"></td>
-<h1> FourthDownPunt</h1>
+<table>
+	<tr>
+	<td style = "width: 33%"></td>
+	<td style = "width: 33%; text-align: middle"><IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg"></td>
+	<td style = "width: 33%">
+	</table>
+	<h1> FourthDownPunt</h1>
 <p> This is a page for our stupid madden league, dude</p>
 </body>
 </html>
