--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <table>
 	<tr>
 	<td style = "width: 33%"></td>
-	<td style = "width: 33%; text-align: middle"><IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg"></td>
+	<td style = "width: 33%; vertical-align: middle"><IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg"></td>
 	<td style = "width: 33%">
 	</table>
 	<h1> FourthDownPunt</h1>
