added link to rules page

--- a/Rules.html
+++ b/Rules.html
@@ -10,5 +10,11 @@ title: Rules
 <title> Rules </title>
 <body style = "background-color: #f6f6f6;">
 <h1> Rules Bruh </h1>
+<table>
+	<tr>
+		<td> <a href="index.html">Homepage</a></td>
+		<td> <a href="Rules">Rules BITCHES </a></td>
+	</tr>
+	</table>
 </body>
 </html>
