--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <title> Main page </title>
 </head>
