--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
 		<td> <a href="Rules">Rules BITCHES </a></td>
 	</tr>
 	</table>
-<table>
-	<tr>
-	<td style = "width: 33%"></td>
-	<td style = "width: 33%;"><IMG SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg" style = "vertical-align: middle"></td>
-	<td style = "width: 33%">
-	</table>
-	<h1> FourthDownPunt</h1>
+<IMG id = "logo" SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg">
+<h1> FourthDownPunt</h1>
 <p> This is a page for our stupid madden league, dude</p>
 </body>
 </html>
