--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title> Main page </title>
 </head>
 <body>
-<table style = "background-color: #FFC125; width: 100%">
+<table>
 	<tr>
 		<td> <a href="index.html">Homepage</a></td>
 		<td> <a href="Rules">Rules BITCHES </a></td>
