--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <title> Main page </title>
 </head>
+<style>
+body {
+background-image: url("https://cdn.vox-cdn.com/thumbor/P_hMaZ4d-ETlX26f49M_KLoXSbA=/0x0:1920x1080/1600x900/cdn.vox-cdn.com/uploads/chorus_image/image/50471841/MERCEDES_BENZ_STADIUM__2_.0.0.jpg");
+}
+</style>
 <body>
+
 <table>
 	<tr>
 		<td> <a href="index.html">Homepage</a></td>
