--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <table>
 	<tr>
-		<td> <a IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" style = "width: 150px; height: 100px" href="index.html"></a></td>
+		<td> <IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" style = "width: 150px; height: 100px" href="index.html"></td>
 		<td> <a href="Rules">Rules BITCHES </a></td>
 	</tr>
 	</table>
