--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
 <IMG id = "logo" SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg">
 <h1> FourthDownPunt</h1>
 <p> This is a page for our stupid madden league, dude</p>
+<h1><form>
+	First name:<br>
+	<input type="text" name="firstname"><br>
+	Last name:<br>
+	<input type="text" name="lastname"><br>
+	Email:<br>
+	<input type="text" name="emailaddress"><br>
+	Additional Questions:<br>
+	<input type="text" name="questions"><br>
+	</form>  </h1>
 </body>
 </html>
