--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 
 <table>
 	<tr>
-		<td> <IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" style = "width: 150px; height: 100px" href="index.html"></td>
+		<td> <a href="index.html"><IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" style = "width: 50px; height: 40px"></a></td>
 		<td> <a href="Rules">Rules BITCHES </a></td>
 	</tr>
 	</table>
 <IMG id = "logo" SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg">
 <h1> FourthDownPunt</h1>
-<p> This is a page for our stupid madden league, dude</p>
 <h1><form>
 	First name:<br>
 	<input type="text" name="firstname"><br>
