--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <IMG id = "logo" SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg">
 <h1> FourthDownPunt</h1>
 <p> This is a page for our stupid madden league, dude</p>
-<h1><form>
+<h1>
+<form>
 	First name:<br>
 	<input type="text" name="firstname"><br>
 	Last name:<br>
@@ -25,6 +26,7 @@
 	<input type="text" name="emailaddress"><br>
 	Additional Questions:<br>
 	<input type="text" name="questions"><br>
-	</form>  </h1>
+	</form>  
+	</h1>
 </body>
 </html>
