--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 	</h1>
 -->
 		<a href=https://www.easports.com/madden-nfl/news/2017/madden-ratings-oline>
-		<img src="https://static.pexels.com/photos/4198/field-sport-ball-america.jpg"/>
+		<img src="https://static.pexels.com/photos/4198/field-sport-ball-america.jpg" style = "width:50px; height:40px"/>
 		
 	</a>
-	
+
 </body>
 </html>
