--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</h1>
 -->
 		<a href=https://www.easports.com/madden-nfl/news/2017/madden-ratings-oline>
-		<img src="https://static.pexels.com/photos/4198/field-sport-ball-america.jpg" style = "width:50px; height:40px"/>
+		<img src="https://static.pexels.com/photos/4198/field-sport-ball-america.jpg" alt="foozball" style = "width:50px; height:40px;border:0;"/>
 		
 	</a>
 
