--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	</form>  
 	</h1>
 -->
-		<a href=https://www.easports.com/madden-nfl/news/2017/madden-ratings-oline>
-		<img src="https://static.pexels.com/photos/4198/field-sport-ball-america.jpg" alt="foozball" style = "width:50px; height:40px;border:0;"/>
+		<a href=https://www.easports.com/madden-nfl/player-ratings>
+		<img src="https://i.ytimg.com/vi/8KHJnKPeMq0/maxresdefault.jpg" alt="foozball" style = "width:50px; height:40px;border:0;"/>
 		
 	</a>
 
