--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <title> Main page </title>
 </head>
 <body>
+<video controls>
+  <source src="https://www.youtube.com/watch?v=SOTDw52BN_A" type="video/mp4">
+  <source src="https://www.youtube.com/watch?v=SOTDw52BN_A" type="video/webm">
+  <p>Your browser doesn't support HTML5 video. Here is a <a href="https://www.youtube.com/watch?v=SOTDw52BN_A">link to the video</a> instead.</p>
+</video>
 
 <table>
 	<tr>
