--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <title> Main page </title>
 </head>
+
+<IMG id="Falcons" SRC = "http://imgur.com/sN1Mz8z">
+
 <body>
 <video controls>
   <source src="https://www.youtube.com/watch?v=SOTDw52BN_A" type="video/mp4">
