--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title> Main page </title>
 </head>
 
-<IMG id="Falcons" SRC = "http://imgur.com/sN1Mz8z">
+<IMG id="Falcons" SRC = "http://i.imgur.com/sN1Mz8z.png">
 
 <body>
 <video controls>
