--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <IMG id="Falcons" SRC = "http://i.imgur.com/sN1Mz8z.png">
 
 <body>
-<video controls>
-  <source src="https://www.youtube.com/watch?v=SOTDw52BN_A" type="video/mp4">
-  <source src="https://www.youtube.com/watch?v=SOTDw52BN_A" type="video/webm">
-  <p>Your browser doesn't support HTML5 video. Here is a <a href="https://www.youtube.com/watch?v=SOTDw52BN_A">link to the video</a> instead.</p>
-</video>
 
-<table>
+<table id = "Toolbar">
 	<tr>
 		<td> <a href="index.html"><IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" style = "width: 50px; height: 40px"></a></td>
 		<td> <a href="Rules">Rules BITCHES </a></td>
 	</tr>
 	</table>
-<IMG id = "logo" SRC ="http://assets1.ignimgs.com/2017/05/11/mad-18-1494536403822_400w.jpg">
 <h1> FourthDownPunt</h1>
-<h1>
-<form>
+
+<table id = "main">
+<tr>
+<td style = "width: 30%">Column 1</td>
+<td style = "width: 40%">Column 2</td>
+<td style = "width: 30%">Column 3</td>
+</tr>
+</table>
 <!--
 <h1><form>
 
