--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <table id = "Toolbar">
 	<tr>
 		<td> <a href="index.html"><IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" style = "width: 50px; height: 40px"></a></td>
-		<td> <a href="Rules">Rules BITCHES </a></td>
+		<td> <a href="Rules">Rules</a></td>
 	</tr>
 	</table>
 <h1> FourthDownPunt</h1>
