--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 <table id = "Toolbar">
 	<tr>
-		<td> <a href="index.html"><IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" style = "width: 50px; height: 40px"></a></td>
-		<td> <a href="Rules">Rules</a></td>
+		<td style = "width: 15%"> <a href="index.html"><IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" style = "width: 50px; height: 40px"></a></td>
+		<td style = "width: 15%"> <a href="Rules">Rules</a></td>
+		<marquee behavior ="scroll" direction = "left"><td style = "width: 60%; background-color: black; color: white;">This is a test announcement</td></marquee>
 	</tr>
 	</table>
 <h1> FourthDownPunt</h1>
