--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 	<tr>
 		<td style = "width: 15%"> <a href="index.html"><IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" style = "width: 50px; height: 40px"></a></td>
 		<td style = "width: 15%"> <a href="Rules">Rules</a></td>
-		<marquee behavior ="scroll" direction = "left"><td style = "width: 60%; background-color: black; color: white;">This is a test announcement</td></marquee>
-	</tr>
+		</tr>
 	</table>
+<DIV class = "marquee">This is a test announcement</DIV>
+	
 <h1> FourthDownPunt</h1>
 
 <table id = "main">
