--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<td style = "width: 15%"> <a href="Rules">Rules</a></td>
 		</tr>
 	</table>
-<DIV class = "marquee">This is a test announcement</DIV>
+<DIV class = "marquee"><p>This is a test announcement</p></DIV>
 	
 <h1> FourthDownPunt</h1>
 
