--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <table id = "Toolbar">
 	<tr>
-		<td style = "width: 15%"> <a href="index.html"><IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" style = "width: 50px; height: 40px"></a></td>
+		<td style = "width: 15%"> <a href="index.html"><IMG SRC = "http://clipart-library.com/images/di9XoLobT.png" alt = "Home" style = "width: 50px; height: 40px"></a></td>
 		<td style = "width: 15%"> <a href="Rules">Rules</a></td>
 		</tr>
 	</table>
