--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 	</form>  
 	</h1>
 -->
-		<a href=https://www.easports.com/madden-nfl/player-ratings>
+		<p id = "ratings"><a href=https://www.easports.com/madden-nfl/player-ratings> 
 		<img src="https://i.ytimg.com/vi/8KHJnKPeMq0/maxresdefault.jpg" alt="foozball" style = "width:50px; height:40px;border:0;"/>
 		
-	</a>
+	</a></p>
 
 </body>
 </html>
