--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </tr>
 </table>
 
-<table id = "NFC North" style= "background-color: blue; border: 1px solid black;">
+<table id = "NFCNorth" style= "background-color: green">
 	<tr> 
 	<td>NFC North</td> </tr>
 	<tr>
@@ -42,6 +42,19 @@
 	<td> 11-5 </td>
 	</tr>
 </table>
+
+<table id = "AFCWest" style = "background-color: black">
+	<tr>
+	<td>AFC West </td> </tr>
+	<tr>
+	<td> 1. <IMG SRC = "https://s-media-cache-ak0.pinimg.com/originals/a3/92/2d/a3922d551599895035782968a4558f69.jpg" style = "width: 25px; height: 25px"> </td>
+	<td> Oakland Raiders </td>
+	<td> 16-0 </td> </tr>
+	<tr> 
+	<td> 2. <IMG SRC = "https://s-media-cache-ak0.pinimg.com/originals/ea/b3/00/eab3005ed8de24d7f699850ac0701c3b.jpg" style = "width: 25px; height: 25px"> </td>
+	<td> Kansas City Chiefs </td>
+	<td> 12-4 </td> </tr>
+	</table>
 	
 <!--
 <h1><form>
