--- a/index.html
+++ b/index.html
@@ -54,22 +54,17 @@
 	<td> 2. <IMG SRC = "https://s-media-cache-ak0.pinimg.com/originals/ea/b3/00/eab3005ed8de24d7f699850ac0701c3b.jpg" style = "width: 25px; height: 25px"> </td>
 	<td> Kansas City Chiefs </td>
 	<td> 12-4 </td> </tr>
+	<tr>
+	<td> 3.<IMG SRC = "https://i.ytimg.com/vi/kNa37HSsS28/maxresdefault.jpg" style = "width:25px; height: 25px"> </td>
+	<td> Denver Broncos </td>
+	<td> 9-7 </td> </tr> 
+	
+	</table>
+
+	<table id = >
+	
 	</table>
 	
-<!--
-<h1><form>
-
-	First name:<br>
-	<input type="text" name="firstname"><br>
-	Last name:<br>
-	<input type="text" name="lastname"><br>
-	Email:<br>
-	<input type="text" name="emailaddress"><br>
-	Additional Questions:<br>
-	<input type="text" name="questions"><br>
-	</form>  
-	</h1>
--->
 		<p id = "ratings"><a href=https://www.easports.com/madden-nfl/player-ratings> 
 		<img src="https://i.ytimg.com/vi/8KHJnKPeMq0/maxresdefault.jpg" alt="foozball" style = "width:50px; height:40px;border:0;"/>
 		
