--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
 	<tr> 
 	<td> 2. <IMG SRC = "https://s-media-cache-ak0.pinimg.com/originals/ea/b3/00/eab3005ed8de24d7f699850ac0701c3b.jpg" style = "width: 25px; height: 25px"> </td>
 	<td> Kansas City Chiefs </td>
-	<td> 12-4 </td> </tr>
+	<td> 12-4 </td> 
+	</tr>
 	<tr>
-	<td> 3.  </td>
-	<td> Denver Broncos </td>
-	<td> 9-7 </td> </tr> 
+	<td> 2. <IMG SRC = "https://i.ytimg.com/vi/vW63O5ZwB4Y/maxresdefault.jpg" style = "width: 25px; height: 25px"> </td>
+	<td> Minnesota Vikings </td>
+	<td> 11-5 </td>
+	</tr>
+	
 	
 	</table>
 
