--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 	</tr>
 	<tr>
 	<td> 2. <IMG SRC = "https://i.ytimg.com/vi/vW63O5ZwB4Y/maxresdefault.jpg" style = "width: 25px; height: 25px"> </td>
-	<td> Minnesota Vikings </td>
-	<td> 11-5 </td>
+	<td> Denver Broncos </td>
+	<td> 9-7 </td>
 	</tr>
 	
 	
