--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<td> 12-4 </td> 
 	</tr>
 	<tr>
-	<td> 2. <IMG SRC = "https://pbs.twimg.com/profile_images/818613120075599873/yMGvb5Cu.jpg" style = "width: 25px; height: 25px"> </td>
+	<td> 2. <IMG SRC = "https://fontmeme.com/images/Denver-Broncos-Logo.jpg" style = "width: 25px; height: 25px"> </td>
 	<td> Denver Broncos </td>
 	<td> 9-7 </td>
 	</tr>
