--- a/index.html
+++ b/index.html
@@ -118,5 +118,16 @@
 		
 	</a></p>
 
+<table id = 'test'>
+	<DIV style = "background-color: blue;">
+	<tr>
+	<td> This should be blue </td>
+	</tr> </div>
+	<DIV style = "background-color: red;">
+	<tr>
+	<td> This should be red </td>
+	</tr> </DIV>
+	</table>
+
 </body>
 </html>
