--- a/index.html
+++ b/index.html
@@ -119,14 +119,12 @@
 	</a></p>
 
 <table id = 'test'>
-	<DIV style = "background-color: blue;">
-	<tr>
+	<tr style = "background-color: blue">
 	<td> This should be blue </td>
-	</tr> </div>
-	<DIV style = "background-color: red;">
-	<tr>
+	</tr>
+	<tr style = "background-color: red">
 	<td> This should be red </td>
-	</tr> </DIV>
+	</tr>
 	</table>
 
 </body>
