--- a/index.html
+++ b/index.html
@@ -28,14 +28,7 @@
 </tr>
 </table>
 
-<audio src="https://www.youtube.com/watch?v=eBySr093wLQ" controls>	
-	<embed 
-		src="https://www.youtube.com/watch?v=eBySr093wLQ"
-		width="300"
-		height="90"
-		loop="true"
-		autostart="true">
-</audio>
+<DIV ID = "Song" style = "display: none"><iframe width="5" height="5" src="https://www.youtube.com/embed/Emyo7sXMspc?autoplay=1" frameborder="0" allowfullscreen></iframe></DIV>
 
 <table id = "NFC">
 	<tr style = "background-color: blue">
