--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <table id = "Toolbar">
 	<tr>
-		<td style = "width: 15%"> <a href="index.html"></a></td>
+		<td style = "width: 15%"> <a href="index.html">Home</a></td>
 		<td style = "width: 15%"> <a href="Rules">Rules</a></td>
 		</tr>
 	</table>
