--- a/Rules.html
+++ b/Rules.html
@@ -10,11 +10,12 @@ title: Rules
 <title> Rules </title>
 <body style = "background-color: #f6f6f6;">
 <h1> Rules Bruh </h1>
-<table>
-	<tr>
-		<td> <a href="index.html">Homepage</a></td>
-		<td> <a href="Rules">Rules BITCHES </a></td>
-	</tr>
-	</table>
+		<table id = "Toolbar">
+			<tr>
+				<td style = "width: 15%"> <a href="index.html"> Homepage</a></td>
+				<td style = "width: 15%"> <a href="Rules">Rules</a></td>
+				<td style = "width: 15%"> <a href="TeamPage.html"> Team Roaster </a></td>
+				</tr>
+			</table>
 </body>
 </html>
