--- a/Rules.html
+++ b/Rules.html
@@ -14,7 +14,7 @@ title: Rules
 			<tr>
 				<td style = "width: 15%"> <a href="index.html"> Homepage</a></td>
 				<td style = "width: 15%"> <a href="Rules">Rules</a></td>
-				<td style = "width: 15%"> <a href="TeamPage.html"> Team page</a></td>
+				<td style = "width: 15%"> <a href="TeamPage.html"> Team Page</a></td>
 				</tr>
 			</table>
 </body>
