--- a/TeamPage.html
+++ b/TeamPage.html
@@ -11,7 +11,7 @@
   			<tr>
   				<td style = "width: 15%"> <a href="index.html"> Homepage</a></td>
   				<td style = "width: 15%"> <a href="Rules">Rules</a></td>
-  				<td style = "width: 15%"> <a href="TeamPage.html"> Team Roaster </a></td>
+  				<td style = "width: 15%"> <a href="TeamPage.html"> Team Page</a></td>
   				</tr>
   			</table>
 </body>
