--- a/TeamPage.html
+++ b/TeamPage.html
@@ -6,7 +6,7 @@
 <title> Main page </title>
 </head>
 <body>
-  <h1> Team roaster </h1>
+  <h1> Team Page </h1>
   		<table id = "Toolbar">
   			<tr>
   				<td style = "width: 15%"> <a href="index.html"> Homepage</a></td>
