--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	<td> 6-10 </td>
 	</tr>
 	<tr style = "background-color: #00ff00">
-	<td> 4. <IMG SRC = "https://s-media-cache-ak0.pinimg.com/originals/fe/e9/28/fee9289511e5ab39c117e762d8927858.jpg" style = "width: 25px; height: 25px"> </td>
+	<td> 4. <a href="TeamPage.html"><img src="https://s-media-cache-ak0.pinimg.com/originals/fe/e9/28/fee9289511e5ab39c117e762d8927858.jpg" width="25 px" height="25 px" class="next" /></a> </td>
 	<td> San Francisco 49ers </td>
 	<td> 0-16 </td>
 	</tr>
