--- a/TeamPage.html
+++ b/TeamPage.html
@@ -3,10 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-<title> Main page </title>
+<title> 49ers </title>
 </head>
 <body>
-  <h1> Falcons </h1>
+  <table id = "main">
+  <tr>
+  <td style = "width: 30%"><IMG SRC = "http://az616578.vo.msecnd.net/files/2016/08/11/636064826811372552-528937336_NFC.jpg" style = "width: 50px; height: 50px; text-align: middle"></td>
+  <td style = "width: 40%; text-align: middle"> 49ers</td>
+  <td id = "49ersLogo" style = "width: 30%"><IMG SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 50px; height: 50px; text-align: center"></td>
+  </tr>
+  </table>
+  <h1> San Francisco 49ers </h1>
   		<table id = "Toolbar">
   			<tr>
   				<td style = "width: 15%"> <a href="index.html"> Homepage</a></td>
@@ -14,5 +21,6 @@
   				<td style = "width: 15%"> <a href="TeamPage.html"> Team Page</a></td>
   				</tr>
   			</table>
+
 </body>
 </html>
