--- a/TeamPage.html
+++ b/TeamPage.html
@@ -8,9 +8,8 @@
 <body>
   <table id = "main">
   <tr>
-  <td style = "width: 30%"><IMG SRC = "http://az616578.vo.msecnd.net/files/2016/08/11/636064826811372552-528937336_NFC.jpg" style = "width: 50px; height: 50px; text-align: middle"></td>
   <td style = "width: 40%; text-align: middle"> 49ers</td>
-  <td id = "49ersLogo" style = "width: 30%"><IMG SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 50px; height: 50px; text-align: center"></td>
+  <td id = "49ersLogo" style = "background-color:red; width: 30%"><IMG SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 50px; height: 50px; text-align: center"></td>
   </tr>
   </table>
   <h1> San Francisco 49ers </h1>
