--- a/TeamPage.html
+++ b/TeamPage.html
@@ -8,11 +8,10 @@
 <body>
   <table id = "main">
   <tr>
-  <td style = "width: 40%; text-align: middle"> 49ers</td>
-  <td id = "49ersLogo" style = "background-color:red; width: 30%"><IMG SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 50px; height: 50px; text-align: center"></td>
+  <td style = "width: 40%; text-align: middle"> </td>
+  <td id = "49ersLogo" style = "background-color:red; width: 30%"><IMG SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 50px; height: 150px; text-align: center"></td>
   </tr>
   </table>
-  <h1> San Francisco 49ers </h1>
   		<table id = "Toolbar">
   			<tr>
   				<td style = "width: 15%"> <a href="index.html"> Homepage</a></td>
