--- a/TeamPage.html
+++ b/TeamPage.html
@@ -16,7 +16,7 @@
 
         <table id = "main">
         <tr>
-        <td id = "49ersLogo" style = "background-color:red; width: 100%;"><IMG SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 50px; height: 50px; text-align: right"></td>
+        <td id = "49ersLogo" style = "background-color:red; width: 200%;"> San Fransico 49ers <IMG SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 50px; height: 50px; text-align: right"></td>
         </tr>
         </table>
 </body>
