--- a/TeamPage.html
+++ b/TeamPage.html
@@ -14,9 +14,9 @@
   				</tr>
   			</table>
 
-        <table id = "main">
+        <table id = "49ersbanner">
         <tr>
-        <td id = "49ersLogo" style = "background-color:red; width: 50%; height: 100%;"> <IMG SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 50px; height: 50px; text-align: right"><p style = "font-family:impact; color:#FFDF00; text-align: center;" > San Fransico 49ers</p> </td>
+        <td id = "49ersLogo" style = "background-color:red; width: 50%;"> <IMG SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 50px; height: 50px; text-align: right"><p style = "font-family:impact; color:#FFDF00; text-align: center;" > San Fransico 49ers</p> </td>
         </tr>
         </table>
 </body>
