--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<tr>
 		<td style = "width: 15%"> <a href="index.html"> Homepage</a></td>
 		<td style = "width: 15%"> <a href="Rules">Rules</a></td>
-		<td style = "width: 15%"> <a href="TeamPage.html"> Team Page</a></td>
 		</tr>
 	</table>
 
@@ -112,7 +111,7 @@
 	<td> 6-10 </td>
 	</tr>
 	<tr style = "background-color: #00ff00">
-	<td> 4. <a href="TeamPage.html"><img src="https://s-media-cache-ak0.pinimg.com/originals/fe/e9/28/fee9289511e5ab39c117e762d8927858.jpg" width="25 px" height="25 px" class="next" /></a> </td>
+	<td> 4. <a href="49ers.html"><img src="https://s-media-cache-ak0.pinimg.com/originals/fe/e9/28/fee9289511e5ab39c117e762d8927858.jpg" width="25 px" height="25 px" class="next" /></a> </td>
 	<td> San Francisco 49ers </td>
 	<td> 0-16 </td>
 	</tr>
