--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 	<td> 13-3 </td>
 	</tr>
 	<tr style = "background-color: blue">
-	<td> 2. <IMG SRC = "http://sports.cbsimg.net/images/blogs/STL-Rams-logo-blue-01-15-16.jpg" style = "width: 25px; height: 25px"> </td>
+	<td> 2. <a href="rams.html"> <IMG SRC = "http://sports.cbsimg.net/images/blogs/STL-Rams-logo-blue-01-15-16.jpg" style = "width: 25px; height: 25px"> </td>
 	<td> LA Rams </td>
 	<td> 7-9 </td>
 	</tr>
 	<tr style = "background-color: blue">
-	<td> 3. <IMG SRC = "https://s-media-cache-ak0.pinimg.com/originals/fe/7e/78/fe7e78550ba36d03c439463753ce36ce.jpg" style = "width: 25px; height: 25px"> </td>
+	<td> 3. <img src= "https://s-media-cache-ak0.pinimg.com/originals/fe/7e/78/fe7e78550ba36d03c439463753ce36ce.jpg" style = "width: 25px; height: 25px"> </td>
 	<td> Arizona Cardinals </td>
 	<td> 6-10 </td>
 	</tr>
