--- a/rams.html
+++ b/rams.html
@@ -15,7 +15,7 @@
 
         <table id = "Ramsbanner"  width ="100%" border="0" cellpadding="0" cellspacing="0">
         <tr>
-        <td id = "RamsLogo" style = "background-color:red; width: 50%;" border="0" cellpadding="0" cellspacing="0"  > <IMG SRC = "https://s-media-cache-ak0.pinimg.com/originals/b9/4e/af/b94eaf0efef6dd3f142f7964a80e66a8.jpg" style = "width: 150px; height: 150px; text-align: right"><p id = "49ersbanner" style = "font-family:impact; color:#FFDF00; text-align: center;" > San Fransico 49ers</p> </td>
+        <td id = "RamsLogo" style = "background-color:Blue; width: 50%;" border="0" cellpadding="0" cellspacing="0"  > <IMG SRC = "https://s-media-cache-ak0.pinimg.com/originals/b9/4e/af/b94eaf0efef6dd3f142f7964a80e66a8.jpg" style = "width: 150px; height: 150px; text-align: right"><p id = "49ersbanner" style = "font-family:impact; color:White; text-align: center;" > Los Angles Rams </p> </td>
         </tr>
         </table>
 </body>
