--- a/49ers.html
+++ b/49ers.html
@@ -15,7 +15,8 @@
 
         <table id = "49ersbanner"  width ="100%" border="0" cellpadding="0" cellspacing="0">
         <tr>
-        <td id = "49ersLogo" style = "background-color:red; width: 50%;"> <IMG id = "49erspic" SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 200px; height: 200px; text-align: right"><p id = "49ersbanner" style = "font-family:impact; color:#FFDF00; text-align: center;" > San Fransico 49ers</p> </td>
+        <td id = "49ersLogo" style = "background-color:red; width: 50%;"> <IMG id = "49erspic" SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 200px; height: 200px; text-align: right"></td>
+        <td style="text-align: center; font-family: impact; color:gold;"> San Francico 49ers </td>  
         </tr>
         </table>
 </body>
