--- a/49ers.html
+++ b/49ers.html
@@ -15,7 +15,7 @@
 
         <table id = "49ersbanner"  width ="100%" border="0" cellpadding="0" cellspacing="0">
         <tr>
-        <td id = "49ersLogo" style = "background-color:red; width: 50%;"> <IMG id = "49erspic" SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 200px; height: 200px; text-align: right"><h1 id = "49ersbanner" style = "font-family:impact; color:White; text-align: center;" >San fran </h1> </td>
+        <td id = "49ersLogo" style = "background-color:red; width: 50%;"> <IMG id = "49erspic" SRC = "https://pbs.twimg.com/profile_images/867857736947707906/bHS1f4yp.jpg" style = "width: 200px; height: 200px; text-align: right"><p id = "49ersbanner" style = "font-family:impact; color:White; text-align: center;" >San fran </p> </td>
         <td style="text-align: center; font-family: impact; color: gold;"> San Francico 49ers </td>
         </tr>
         </table>
